# QtCalculator

./: CMakeLists.txt  README.md
qml/: CalcButton.qml  Main.qml  Theme.qml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  StyleHelper.cpp  StyleHelper.h  main.cpp
src/core/: CMakeLists.txt  CalculatorModel.cpp  CalculatorModel.h
src/resources/: CMakeLists.txt  styles.qrc
src/resources/styles/: buttons.qss  core.qss  core_light.qss  inputs.qss
src/ui/: CMakeLists.txt  CalcWidget.cpp  CalcWidget.h  MainWindow.cpp  MainWindow.h
